# HumeshView

./: README.md  devlog_charView.html
characterviewer/: CMakeLists.txt  glad.c  main.cpp
characterviewer/Exercises/: d3_aPos.fs  d3_aPos.vs  d3_attr.cpp  d3_blink.cpp  d3_ex1_attributes.cpp  d3_offset.cpp  d3_offset.vs  d3_shacl.cpp  d3_shacl.vs
characterviewer/Shaders/: shader.fs  shader.vs
